# GmGM-package

./: README.md  meson.build  pyproject.toml
src/GmGM_BaileyA/: GmGM.py  generate_data.py  nonparanormal_skeptic.py
src/GmGM_BaileyA/fortran/: EXTRACT_D_VALUES.f90  PROJECT_INV_KRON_SUM.f90  SUM_LOG_SUM.f90  build-for-python.py  build-for-python.sh  fortran_core-f2pywrappers2.f90  fortran_core.f90  fortran_core.mod  fortran_coremodule.c
tests/: fortran_imports.py
