[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GmGM_BaileyA"
version = 0.0.1
authors = [
    {
        name="Bailey Andrew",
        email="sceba@leeds.ac.uk"
    },
]
description = "A multi-modal multi-axis Gaussian graphical model implementing the work 'GmGM: A fast multi-omics graphical model' by Andrew et al."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/BaileyAndrew/GmGM-package"
"Bug Tracker" = "https://github.com/BaileyAndrew/GmGM-package/issues"